--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,2 @@
 PORT = 3000
-MONGO_URI = mongodb+srv://nicoswaves:niecshenz2020@cluster0.p3b1y.mongodb.net/storybooks?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://nicoswaves:xxxxxxxxxx@cluster0.p3b1y.mongodb.net/storybooks?retryWrites=true&w=majority
