--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,5 @@
 PORT = 3000
 MONGO_URI = mongodb+srv://nicoswaves:niecshenz2020@cluster0.p3b1y.mongodb.net/storybooks?retryWrites=true&w=majority
+
+GOOGLE_CLIENT_ID=366016447919-8qg7ah174tt5s4890qlhprghk1ckbt0b.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET =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
